--- a/Git.yaml
+++ b/Git.yaml
@@ -18,17 +18,10 @@ jobs:
       - name: Get and log branch name
         run: |
           echo "Hello my frist: $GITHUB_REF"
-          
-          # Extract branch name from the full ref
-          BRANCH_NAME=$(echo "${GITHUB_REF##*/}")
-          echo "Branch name extracted: $BRANCH_NAME"
-
-          # Write branch name to a file
-          echo "$BRANCH_NAME" > branch_name.txt
 
       # Step 3: Upload the file (optional)
       - name: Upload branch name file
         uses: actions/upload-artifact@v3
         with:
-          name: branch_name
+          name: Majed
           path: file.json
